Updating to latest FlutterFlow output.

--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = bmjobs
+PRODUCT_NAME = campmate
 
 // The application's bundle identifier
 PRODUCT_BUNDLE_IDENTIFIER = Robin.Job.Posts
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 bmjobs. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 campmate. All rights reserved.
